force-app/main/default/objects/External_Document__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Contract_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>