force-app/main/default/objects/External_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Specification</fullName>
            </value>
            <value>
                <fullName>Appendix</fullName>
            </value>
            <value>
                <fullName>Acceptance Act</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>