force-app/main/default/objects/External_Document__c/fields/External_File_Id__c.field-meta.xml
<CustomField>
    <fullName>External_File_Id__c</fullName>
    <label>External File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>