force-app/main/default/objects/External_Document__c/fields/File_URL__c.field-meta.xml
<CustomField>
    <fullName>File_URL__c</fullName>
    <description>Opens the document in a view mode</description>
    <formula>HYPERLINK(&quot;https://drive.google.com/file/d/&quot; &amp; External_File_Id__c &amp; &quot;/view&quot;, &quot;View document&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Click to open the document, stored in external storage</inlineHelpText>
    <label>File URL</label>
    <type>Text</type>
</CustomField>