force-app/main/default/objects/External_Document__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Project_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>